--- a/project/res/layout/fragment_results_loading.xml
+++ b/project/res/layout/fragment_results_loading.xml
@@ -94,42 +94,59 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:animateLayoutChanges="true"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/loading_tv"
+            <LinearLayout
+                android:id="@+id/split_text_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/loading"/>
+                android:layout_gravity="center_horizontal"
+                android:animateLayoutChanges="true"
+                android:visibility="gone"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/loading_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/loading"/>
+
+                <TextView
+                    android:id="@+id/hotels_tv"
+                    android:paddingLeft="2dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nav_hotels"/>
+
+                <TextView
+                    android:id="@+id/and_tv"
+                    android:paddingLeft="2dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/and"/>
+
+                <TextView
+                    android:id="@+id/flights_tv"
+                    android:paddingLeft="2dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nav_flights"/>
+
+                <TextView
+                    android:id="@+id/ellipsis_tv"
+                    android:paddingLeft="2dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="&#8230;"/>
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/hotels_tv"
-                android:paddingLeft="2dp"
+                android:id="@+id/all_in_one_loading_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/nav_hotels"/>
-
-            <TextView
-                android:id="@+id/and_tv"
-                android:paddingLeft="2dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/and"/>
-
-            <TextView
-                android:id="@+id/flights_tv"
-                android:paddingLeft="2dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/nav_flights"/>
-
-            <TextView
-                android:id="@+id/ellipsis_tv"
-                android:paddingLeft="2dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="&#8230;"/>
+                android:gravity="center_horizontal"
+                android:visibility="gone"
+                android:text="@string/loading_hotels_and_flights"/>
 
         </LinearLayout>
     </LinearLayout>
