--- a/project/res/layout/fragment_results_guests.xml
+++ b/project/res/layout/fragment_results_guests.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:background="#FFFFFF"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -30,7 +29,9 @@
                 android:layout_gravity="right"
                 android:textSize="18sp"
                 android:text="@string/DONE"
-                android:textColor="#3E79A3"/>
+                android:textColor="#3E79A3"
+                android:drawablePadding="8dp"
+                android:drawableLeft="@drawable/ic_tablet_traveler_checkmark"/>
         </FrameLayout>
 
         <LinearLayout
@@ -40,15 +41,13 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <TextView
+            <ImageView
                 android:id="@+id/adults_minus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textSize="32dp"
-                android:textColor="#3F3F3F"
                 android:layout_weight="1"
-                android:text="-"/>
+                android:src="@drawable/ic_tablet_traveler_minus"/>
 
             <TextView
                 android:id="@+id/adult_count_text"
@@ -56,17 +55,15 @@
                 android:layout_height="wrap_content"
                 android:textSize="24dp"/>
 
-            <TextView
+            <ImageView
                 android:id="@+id/adults_plus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_weight="1"
-                android:textColor="#3F3F3F"
-                android:textSize="32dp"
-                android:text="+"/>
+                android:src="@drawable/ic_tablet_traveler_plus"/>
         </LinearLayout>
-        <!-- Pluses and minuses will be replaced with drawables when we get them -->
+
         <LinearLayout
             android:id="@+id/children_container"
             android:layout_width="match_parent"
@@ -74,15 +71,13 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <TextView
+            <ImageView
                 android:id="@+id/children_minus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textSize="32dp"
-                android:textColor="#3F3F3F"
                 android:layout_weight="1"
-                android:text="-"/>
+                android:src="@drawable/ic_tablet_traveler_minus"/>
 
             <TextView
                 android:id="@+id/child_count_text"
@@ -90,29 +85,27 @@
                 android:layout_height="wrap_content"
                 android:textSize="24dp"/>
 
-            <TextView
+            <ImageView
                 android:id="@+id/children_plus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_weight="1"
-                android:textColor="#3F3F3F"
-                android:textSize="32dp"
-                android:text="+"/>
+                android:src="@drawable/ic_tablet_traveler_plus"/>
         </LinearLayout>
 
         <include
             layout="@layout/include_child_age_selectors"/>
 
-            <TextView
-                android:id="@+id/tablet_lap_infant_alert"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:background="#FF9900"
-                android:textColor="#F3F3F3"
-                android:textSize="16sp"
-                android:text="@string/not_enough_laps_for_infants"
-                android:visibility="gone"/>
+        <TextView
+            android:id="@+id/tablet_lap_infant_alert"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="#FF9900"
+            android:textColor="#F3F3F3"
+            android:textSize="16sp"
+            android:text="@string/not_enough_laps_for_infants"
+            android:visibility="gone"/>
     </LinearLayout>
 </ScrollView>
