--- a/project/res/layout/fragment_tablet_checkout_data_form.xml
+++ b/project/res/layout/fragment_tablet_checkout_data_form.xml
@@ -10,9 +10,9 @@
         android:id="@+id/header_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FFFFFF"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:background="#FFFFFF"
         android:padding="16dp">
 
         <com.expedia.bookings.widget.TextView
@@ -20,45 +20,65 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
+            android:drawableLeft="@drawable/ic_action_bar_checkmark_disabled"
             android:gravity="center_vertical"
             android:text="@string/done"
-            app:textAllCaps="true"
-            app:textStyle="medium"
-            android:drawableLeft="@drawable/ic_action_bar_checkmark_disabled"
+            android:textSize="14dp"
             android:textStyle="bold"
-            android:textSize="14dp" />
+            app:textAllCaps="true"
+            app:textStyle="medium" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:layout_weight="0"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:layout_weight="0"
             android:background="@color/divider_grey" />
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/header_tv"
             android:layout_width="wrap_content"
-            android:layout_weight="0"
             android:layout_height="wrap_content"
+            android:layout_weight="0"
             android:gravity="center_vertical"
             android:text="@string/traveler_num_and_category_TEMPLATE"
-            app:textStyle="light"
-            android:textSize="16dp" />
+            android:textSize="16dp"
+            app:textStyle="light" />
 
     </LinearLayout>
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/content_container"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#E5E5E5"
-            android:orientation="vertical"
-            android:padding="16dp" />
-    </ScrollView>
+            android:layout_above="@+id/credit_card_fees_message"
+            android:layout_alignParentTop="true">
+
+            <LinearLayout
+                android:id="@+id/content_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#E5E5E5"
+                android:orientation="vertical"
+                android:padding="16dp" />
+        </ScrollView>
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/credit_card_fees_message"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_alignParentBottom="true"
+            android:background="#282828"
+            android:bufferType="spannable"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:textSize="17sp"
+            android:visibility="gone"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
