--- a/project/res/layout-sw600dp/fragment_cvv_entry.xml
+++ b/project/res/layout-sw600dp/fragment_cvv_entry.xml
@@ -42,14 +42,16 @@
         android:textColor="@android:color/white"
         app:textStyle="light" />
 
-
-    <!-- Credit card at top of screen (or to the left on tablet) -->
+    <!-- Credit card to the left -->
 
     <FrameLayout
         android:id="@+id/credit_card_section_holder"
-        style="@style/CvvScreenCreditCard"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="8dp"
+        android:layout_toLeftOf="@id/center">
 
         <!-- Credit card with logo and signature -->
 
@@ -78,11 +80,118 @@
 
     </FrameLayout>
 
-    <!-- Input buttons at bottom (or right on tablet) -->
+    <!-- Input buttons on the right -->
 
-    <include
+    <com.expedia.bookings.section.CreditCardInputSection
         android:id="@+id/credit_card_input_section"
-        style="@style/CvvScreenInput"
-        layout="@layout/section_credit_card_input" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_toRightOf="@id/center"
+        android:stretchColumns="*" >
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <Button
+                android:id="@+id/one_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_one_btn"
+                android:text="@string/one" />
+
+            <Button
+                android:id="@+id/two_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_two_btn"
+                android:text="@string/two" />
+
+            <Button
+                android:id="@+id/three_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_three_btn"
+                android:text="@string/three" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <Button
+                android:id="@+id/four_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_four_btn"
+                android:text="@string/four" />
+
+            <Button
+                android:id="@+id/five_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_five_btn"
+                android:text="@string/five" />
+
+            <Button
+                android:id="@+id/six_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_six_btn"
+                android:text="@string/six" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <Button
+                android:id="@+id/seven_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_seven_btn"
+                android:text="@string/seven" />
+
+            <Button
+                android:id="@+id/eight_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_eight_btn"
+                android:text="@string/eight" />
+
+            <Button
+                android:id="@+id/nine_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_nine_btn"
+                android:text="@string/nine" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <ImageButton
+                android:id="@+id/delete_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_delete_btn"
+                android:src="@drawable/ic_keypad_delete" />
+
+            <Button
+                android:id="@+id/zero_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_zero_btn"
+                android:text="@string/zero" />
+
+            <Button
+                android:id="@+id/book_button"
+                style="@style/CreditCardButton"
+                android:background="?attr/cvvBookButtonKeypadDrawable"
+                android:includeFontPadding="true"
+                android:text="@string/book"
+                android:textColor="?attr/cvvBookButtonTextColor"
+                android:textSize="@dimen/cvv_keypad_book_text_size" />
+        </TableRow>
+
+    </com.expedia.bookings.section.CreditCardInputSection>
 
 </RelativeLayout>
