--- a/project/res/layout/fragment_cvv_entry.xml
+++ b/project/res/layout/fragment_cvv_entry.xml
@@ -13,13 +13,15 @@
         android:layout_centerInParent="true"
         android:visibility="invisible" />
 
-    <!-- Credit card at top of screen (or to the left on tablet) -->
+    <!-- Credit card at top of screen -->
 
     <FrameLayout
         android:id="@+id/credit_card_section_holder"
-        style="@style/CvvScreenCreditCard"
         android:layout_width="@dimen/credit_card_checkout_width"
-        android:layout_height="@dimen/credit_card_checkout_height" >
+        android:layout_height="@dimen/credit_card_checkout_height"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="55dp"
+        android:layout_above="@id/center">
 
         <!-- Credit card with logo and signature -->
 
@@ -70,11 +72,117 @@
         android:gravity="center"
         android:singleLine="true" />
 
-    <!-- Input buttons at bottom (or right on tablet) -->
+    <!-- Input buttons at bottom -->
 
-    <include
+    <com.expedia.bookings.section.CreditCardInputSection
         android:id="@+id/credit_card_input_section"
-        style="@style/CvvScreenInput"
-        layout="@layout/section_credit_card_input" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/center"
+        android:layout_margin="24dp"
+        android:stretchColumns="*" >
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <Button
+                android:id="@+id/one_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_one_btn"
+                android:text="@string/one" />
+
+            <Button
+                android:id="@+id/two_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_two_btn"
+                android:text="@string/two" />
+
+            <Button
+                android:id="@+id/three_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_three_btn"
+                android:text="@string/three" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <Button
+                android:id="@+id/four_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_four_btn"
+                android:text="@string/four" />
+
+            <Button
+                android:id="@+id/five_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_five_btn"
+                android:text="@string/five" />
+
+            <Button
+                android:id="@+id/six_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_six_btn"
+                android:text="@string/six" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <Button
+                android:id="@+id/seven_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_seven_btn"
+                android:text="@string/seven" />
+
+            <Button
+                android:id="@+id/eight_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_eight_btn"
+                android:text="@string/eight" />
+
+            <Button
+                android:id="@+id/nine_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_nine_btn"
+                android:text="@string/nine" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <ImageButton
+                android:id="@+id/delete_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_delete_btn"
+                android:src="@drawable/ic_keypad_delete" />
+
+            <Button
+                android:id="@+id/zero_button"
+                style="@style/CreditCardButton"
+                android:contentDescription="@string/cd_zero_btn"
+                android:text="@string/zero" />
+
+            <Button
+                android:id="@+id/book_button"
+                style="@style/CreditCardButton"
+                android:background="?attr/cvvBookButtonKeypadDrawable"
+                android:includeFontPadding="true"
+                android:text="@string/book"
+                android:textColor="?attr/cvvBookButtonTextColor"
+                android:textSize="@dimen/cvv_keypad_book_text_size" />
+        </TableRow>
+
+    </com.expedia.bookings.section.CreditCardInputSection>
 
 </RelativeLayout>
