--- a/project/src/main/res/layout/fragment_hotel_filters.xml
+++ b/project/src/main/res/layout/fragment_hotel_filters.xml
@@ -32,6 +32,7 @@
             android:textColor="#FF0B4EA4"
             android:textSize="18sp"
             app:textStyle="light" />
+
     </RelativeLayout>
 
     <ScrollView
@@ -78,60 +79,34 @@
 
                 <RadioButton
                     android:id="@+id/sort_by_price_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_sort_by_price"
-                    android:gravity="center"
-                    android:text="@string/price"
-                    android:textColor="@color/sliding_group_text" />
+                    android:text="@string/price" />
 
                 <RadioButton
                     android:id="@+id/sort_by_rating_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
-                    android:checked="true"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_sort_by_rating"
-                    android:gravity="center"
-                    android:text="@string/rating"
-                    android:textColor="@color/sliding_group_text" />
+                    android:text="@string/rating" />
 
                 <RadioButton
                     android:id="@+id/sort_by_distance_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_sort_by_distance"
-                    android:gravity="center"
-                    android:text="@string/distance"
-                    android:textColor="@color/sliding_group_text" />
+                    android:text="@string/distance" />
 
                 <RadioButton
                     android:id="@+id/sort_by_popular_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_sort_by_popular"
-                    android:gravity="center"
-                    android:text="@string/popular"
-                    android:textColor="@color/sliding_group_text" />
+                    android:text="@string/popular" />
 
                 <RadioButton
                     android:id="@+id/sort_by_deals_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
-                    android:checked="true"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_sort_hotels_by_deals"
-                    android:gravity="center"
-                    android:text="@string/discounts"
-                    android:textColor="@color/sliding_group_text" />
+                    android:text="@string/discounts" />
+
             </com.expedia.bookings.widget.SlidingRadioGroup>
 
             <TextView
@@ -152,48 +127,28 @@
 
                 <RadioButton
                     android:id="@+id/price_cheap_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_filter_for_low_range_hotel_prices"
-                    android:gravity="center"
-                    android:text="?attr/hotelListingFilterPriceCheapString"
-                    android:textColor="@color/sliding_group_text" />
+                    android:text="?attr/hotelListingFilterPriceCheapString" />
 
                 <RadioButton
                     android:id="@+id/price_moderate_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_filter_for_mid_range_hotel_prices"
-                    android:gravity="center"
-                    android:text="?attr/hotelListingFilterPriceModerateString"
-                    android:textColor="@color/sliding_group_text" />
+                    android:text="?attr/hotelListingFilterPriceModerateString" />
 
                 <RadioButton
                     android:id="@+id/price_expensive_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_filter_for_high_range_hotel_prices"
-                    android:gravity="center"
-                    android:text="?attr/hotelListingFilterPriceExpensiveString"
-                    android:textColor="@color/sliding_group_text" />
+                    android:text="?attr/hotelListingFilterPriceExpensiveString" />
 
                 <RadioButton
                     android:id="@+id/price_all_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
-                    android:checked="true"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_filter_remove_hotel_price_filters"
-                    android:gravity="center"
-                    android:text="@string/all"
-                    android:textColor="@color/sliding_group_text" />
+                    android:text="@string/all" />
+
             </com.expedia.bookings.widget.SlidingRadioGroup>
 
             <com.expedia.bookings.widget.SlidingRadioGroup
@@ -205,45 +160,25 @@
 
                 <RadioButton
                     android:id="@+id/radius_small_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
-                    android:contentDescription="@string/cd_filter_for_nearest_hotels"
-                    android:gravity="center"
-                    android:textColor="@color/sliding_group_text" />
+                    style="@style/V2.Widget.RadioButton.Filter"
+                    android:contentDescription="@string/cd_filter_for_nearest_hotels" />
 
                 <RadioButton
                     android:id="@+id/radius_medium_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
-                    android:contentDescription="@string/cd_filter_for_further_distanced_hotels"
-                    android:gravity="center"
-                    android:textColor="@color/sliding_group_text" />
+                    style="@style/V2.Widget.RadioButton.Filter"
+                    android:contentDescription="@string/cd_filter_for_further_distanced_hotels" />
 
                 <RadioButton
                     android:id="@+id/radius_large_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
-                    android:checked="true"
-                    android:contentDescription="@string/cd_filter_for_furthest_distanced_hotels"
-                    android:gravity="center"
-                    android:textColor="@color/sliding_group_text" />
+                    style="@style/V2.Widget.RadioButton.Filter"
+                    android:contentDescription="@string/cd_filter_for_furthest_distanced_hotels" />
 
                 <RadioButton
                     android:id="@+id/radius_all_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_filter_remove_distance_filter"
-                    android:gravity="center"
-                    android:text="@string/all"
-                    android:textColor="@color/sliding_group_text" />
+                    android:text="@string/all" />
+
             </com.expedia.bookings.widget.SlidingRadioGroup>
 
             <com.expedia.bookings.widget.SlidingRadioGroup
@@ -253,48 +188,31 @@
                 android:layout_height="@dimen/sliding_filter_row_height"
                 android:layout_marginBottom="12dp" >
 
-                <RadioButton
+                <com.expedia.bookings.widget.ImageRadioButton
                     android:id="@+id/rating_low_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/btn_filter_3star"
-                    android:button="@android:color/transparent"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_filter_hotels_for_three_or_more_stars"
-                    android:textColor="@color/sliding_group_text" />
+                    app:image="@drawable/btn_filter_3star" />
 
-                <RadioButton
+                <com.expedia.bookings.widget.ImageRadioButton
                     android:id="@+id/rating_medium_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/btn_filter_4star"
-                    android:button="@android:color/transparent"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_filter_hotels_for_four_or_more_stars"
-                    android:textColor="@color/sliding_group_text" />
+                    app:image="@drawable/btn_filter_4star" />
 
-                <RadioButton
+                <com.expedia.bookings.widget.ImageRadioButton
                     android:id="@+id/rating_high_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/btn_filter_5star"
-                    android:button="@android:color/transparent"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:contentDescription="@string/cd_filter_hotels_for_five_stars"
-                    android:gravity="center"
-                    android:textColor="@color/sliding_group_text" />
+                    app:image="@drawable/btn_filter_5star" />
 
                 <RadioButton
                     android:id="@+id/rating_all_button"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:button="@android:color/transparent"
+                    style="@style/V2.Widget.RadioButton.Filter"
                     android:checked="true"
                     android:contentDescription="@string/cd_filter_remove_hotel_star_filters"
-                    android:gravity="center"
-                    android:text="@string/all"
-                    android:textColor="@color/sliding_group_text" />
+                    android:text="@string/all" />
+
             </com.expedia.bookings.widget.SlidingRadioGroup>
 
             <LinearLayout
