--- a/project/src/main/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/main/res/values-sw600dp/tablet_themes.xml
@@ -249,6 +249,7 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
         <item name="android:button">@android:color/transparent</item>
         <item name="android:paddingLeft">8dp</item>
         <item name="android:paddingTop">12dp</item>
