--- a/project/src/main/res/values/attrs.xml
+++ b/project/src/main/res/values/attrs.xml
@@ -186,6 +186,11 @@
         <attr name="sluggishness" format="integer" />
     </declare-styleable>
 
+    <!-- ImageRadioButton -->
+    <declare-styleable name="ImageRadioButton">
+        <attr name="image" format="reference" />
+    </declare-styleable>
+
     <!-- RoundedCornerFrameLayout -->
     <declare-styleable name="RoundedCornerFrameLayout">
         <attr name="radius" format="dimension" />
